<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.atinderpaulk.howtoroot.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:id="@+id/welcome"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/get_started" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step1"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/get_started"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/step1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step2"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/step1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/step2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step3"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/step2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/step3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/step4"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/step3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/step4" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:id="@+id/step5"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/get_started_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started_title"
        android:layout_above="@+id/step5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        app:backgroundTint="@color/colorAccent"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        app:srcCompat="@mipmap/arrow"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="6dp"
        android:layout_above="@+id/get_started_title"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
