<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_oneplusone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="-4dp"
    android:paddingBottom="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.atinderpaulk.howtoroot.Zenfone2Activity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:maxWidth="100dp"
            app:srcCompat="@drawable/zenfone2_image"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp" />

        <TextView
            android:paddingStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/follow_steps"
            android:layout_marginTop="20dp"
            android:id="@+id/follow_steps"
            android:textStyle="bold"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true" />

        <TextView
            android:paddingStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/do_on_phone_warning"
            android:layout_marginTop="20dp"
            android:id="@+id/do_on_phone"
            android:textStyle="bold"
            android:layout_below="@+id/follow_steps"
            android:layout_alignParentStart="true" />

        <!--Steps-->
        <TextView
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zenfone2_step1"
            android:id="@+id/step1"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/do_on_phone"
            android:layout_alignParentStart="true" />

        <TextView
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zenfone2_step2"
            android:id="@+id/step2"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/step1"
            android:layout_alignParentStart="true" />

        <TextView
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zenfone2_step3"
            android:id="@+id/step3"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/step2"
            android:layout_alignParentStart="true" />

        <TextView
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zenfone_step4"
            android:id="@+id/step4"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/step3"
            android:layout_alignParentStart="true" />

        <TextView
            android:paddingStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/zenfone2_unlocked"
            android:layout_marginTop="20dp"
            android:id="@+id/confirmation_bootloader"
            android:textStyle="bold"
            android:layout_below="@+id/step4"
            android:layout_alignParentStart="true" />

        <TextView
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zenfone2_step5"
            android:id="@+id/step5"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/confirmation_bootloader"
            android:layout_alignParentStart="true" />

        <TextView
            android:paddingStart="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zenfone2_enjoy"
            android:id="@+id/enjoy"
            android:layout_marginTop="26dp"
            android:layout_below="@+id/step5"
            android:layout_alignParentStart="true" />
        <!--End of Steps-->

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            app:srcCompat="@drawable/asus_logo"
            android:layout_marginTop="70dp"
            android:layout_toEndOf="@+id/imageView" />

        <TextView
            android:id="@+id/root_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/root_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="7dp"
            android:layout_marginStart="17dp"
            android:layout_below="@+id/imageView2"
            android:layout_alignStart="@+id/imageView2" />

    </RelativeLayout>

</ScrollView>