<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_device"
            android:icon="@mipmap/devices"
            android:title="@string/list_of_devices" />
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/about"
            android:title="@string/title_activity_about" />
        <item
            android:id="@+id/nav_request"
            android:icon="@mipmap/send"
            android:title="Request a Device" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@mipmap/share"
                android:title="Share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@mipmap/feedback"
                android:title="Provide Feedback" />
        </menu>
    </item>

</menu>
